test/corpus/L1/negative/unclosed-array.st
"---
kind: negative
section: error.unclosed-array
codes: E_UNCLOSED_ARRAY
note: literal array missing closing paren
---"
#(1 2
